force-app/main/default/objects/Commission__c/fields/Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage__c</fullName>
    <description>The percentage rate for this commission</description>
    <inlineHelpText>Enter the commission rate (e.g., 5% = 0.05)</inlineHelpText>
    <label>Commission Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>