force-app/main/default/objects/Commission__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <description>Pre-calculated gross margin from OpportunityLineItem at time of commission creation</description>
    <inlineHelpText>The gross margin amount from the product at the time this commission was created</inlineHelpText>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>